[project]
name = "org-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-alimt20181012>=1.5.1",
    "alibabacloud-tea-openapi>=0.4.1",
    "bs4>=0.0.2",
    "deepl>=1.25.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.10",
    "numpy>=2.3.5",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "transmart>=0.2.8",
]
